# imitation_learning_in_modern_video_games

./: .gitignore  README.md  SUPPORT.md  environment.yml  pyproject.toml  requirements.txt
pixelbc/: run_train.py
pixelbc/configs/csgo/: aim_expert_clip_vitb16.yaml  aim_expert_dino_vitb.yaml  aim_expert_focal_large.yaml  aim_expert_focal_xlarge.yaml  aim_expert_impala_resnet_128_noaug.yaml  aim_expert_own_resnet_256.yaml  aim_expert_own_resnet_256_noaug.yaml  aim_expert_own_vit_custom_256.yaml  aim_expert_own_vit_tiny_noaug.yaml  aim_expert_sd_vae.yaml  default.yaml
pixelbc/configs/minerl/: default.yaml  treechop_clip_rn50.yaml  treechop_clip_vitl14.yaml  treechop_dino_vitb_10percent.yaml  treechop_dino_vitl.yaml  treechop_dino_vitl_10percent.yaml  treechop_dino_vits.yaml  treechop_focal_huge.yaml  treechop_impala_resnet_128.yaml  treechop_own_resnet_128.yaml  treechop_own_resnet_128_noaug.yaml  treechop_own_vit_custom_128.yaml  (+5 more)
pixelbc/data/: __init__.py  actions.py  csgo_actions.py  data_parsers.py  data_split.py  datamodule.py  image_preprocessing.py  images.py  minerl_actions.py  utils.py
pixelbc/models/: __init__.py  bc_model.py
pixelbc/online_rollout/: csgo_rollout.py  minerl_rollout.py  online_rollout.py  rollout.py
pixelbc/plotting/: csgo_report_results.py  minerl_plot_treechop.py  plot_grad_cam.py
pixelbc/scripts/: generate_embeddings.py  minerl_download_data.sh  minerl_filter_valid_treechop_trajectories.py  run_minerl_rollouts.py  training_cost_comparison.py
pixelbc/utils/: callbacks.py  config_utils.py  load_checkpoint.py  loggers.py
(+22 files in other folders)
