# inform pip to use setuptools
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# project metadata
[project]
name = "pixelbc"
version = "0.1"
description = "Behaviour cloning from pixels in video games"
authors = [
    {name = "Lukas Schaefer"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "accelerate==0.22.0",
    "albumentations==1.3.1",
    "absl-py==1.4.0",
    "black==24.3.0",
    "cchardet==2.1.7",
    "chardet==5.1.0",
    "decord==0.6.0",
    "diffusers==0.31.0",
    "einops==0.6.1",
    "ffmpegcv==0.2.8",
    "grad-cam==1.4.8",
    "hydra-core==1.3.2",
    "lightning==2.5.0",
    "matplotlib==3.6.3",
    "mss==9.0.1",
    "numpy==1.24.4",
    "omegaconf==2.3.0",
    "prettytable==3.13.0",
    "pynvml==12.0.0",
    "seaborn==0.12.2",
    "tensorboard==2.14.0",
    "timm==0.9.5",
    "torch==2.6.0",
    "torchvision==0.20.1",
    "h5py==3.9.0",
]

[tool.setuptools.packages]
find = {}
